--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body mv-app="balancell" mv-storage="https://github.com/andrewrobinson/balancell/blob/main/data" mv-plugins="tinymce">
     <h1 id="title" property>Balancell</h1>
     <div id="content" property class="tinymce">
-        Edit the headline and description.
+        Edit AAAA the headline and description.
     </div>
 </body>
 </html>
